# bachelor_project

./: README.md
projekt_Abgabe/: README.md  example1.txt  example2.txt  pyproject.toml
projekt_Abgabe/bachelor_project_codes/: data_model.py  interpreter.py  parser.py
